fixed the button/background video, working on issue with the images not showing up

--- a/style.css
+++ b/style.css
@@ -2,12 +2,16 @@ h1{
     font-size: 50px;
     text-align: center;
 }
+.intro-images {
+    position: relative;
+    z-index: 2;
+
+}
 img{
-    width: 350px;
-    height: 500px;
-    display: flex;
-    align-items: flex-end;
-    bottom:10px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 3;
 }
 
 .typewriter h1{
@@ -43,7 +47,6 @@ img{
 .heading{
     position: fixed;
     top: 0;
-    background: rgba(0,0,0,0.5);
     color: #f1f1f1;
     width: 100%;
     padding:20px;
@@ -56,6 +59,7 @@ img{
     border: none;
     background: #000;
     color: #fff;
+    border-radius: 25px;
     cursor: pointer;
 }
 #myBtn:hover{
